check overlap cirkels of complete sample

--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -1116,9 +1116,12 @@ Bijvoorbeeld: Als een nieuw punt voor meer dan 50 % overlapt met een bestaand pu
 
 Er is niet veel overlap.
 In dit geval zal er overlap zijn met de punten uit de pilootstudie in De Moeren. 
-We vervangen alle telpunten uit de steekproef van de zandleemstreek door reeds bestaande punten indien ze voor minstens 50 % overlappen.
+We vervangen alle telpunten uit de steekproef van de zandleemstreek door reeds bestaande punten indien ze voor minstens 50 % overlappen en ze tot hetzelfde stratum behoren.
+Omdat we nu een nieuwe laag van SBZ gebruiken, moeten we dit stratum opnieuw berekenen voor de bestaande punten.
+Er zijn een aantal punten die overlappen voorminstens 50 %.
 
 ```{r}
+# inlezen bestaande punten
 oude_cirkels <- read_csv(here(
     "data",
     "processed",
@@ -1134,44 +1137,28 @@ oude_cirkels <- read_csv(here(
   st_as_sf(coords = c("X", "Y"), crs = 31370) %>% 
   st_buffer(300)
 
+
+# buffer nieuwe punten
 cirkels_zandleemstreek <- steekproef %>% 
   st_buffer(300)
 ```
 
-
-Is er overlap bij dataset steekproef minstens 50 per stratum?
-
 ```{r}
-oude_cirkels <- read_csv(here(
-    "data",
-    "processed",
-    "steekproef_piloot_avimap.csv")) %>%
-  select(plotnaam = definitief_punt,
-         regio,
-         stratum,
-         X, Y) %>%
-  mutate(openheid = ifelse(grepl("HOL", stratum), "HOL", "OL"),
-         sbp = ifelse(grepl("binnen", stratum), "binnen", "buiten"),
-         stratum = gsub("L\\s{1}", "L\\\n", stratum),
-         jaar = 2022L) %>%
-  st_as_sf(coords = c("X", "Y"), crs = 31370) %>% 
-  st_buffer(300)
-
-nieuwe_cirkels <- first_samples(steekproef, 50) %>% 
-  st_buffer(300)
-
-intersect <- st_intersection(oude_cirkels, nieuwe_cirkels) %>% 
+# welke punten overlappen minstens 50 %
+intersect <- st_intersection(oude_cirkels, cirkels_zandleemstreek) %>% 
   mutate(intersect_area = st_area(.) %>% units::drop_units()) %>%
   select(plotnaam, pointid, intersect_area) %>%
   filter(intersect_area >= 0.5 * 300 * 300 * pi) %>%
   st_drop_geometry()
 
+# visualisatie
 mapview(oude_cirkels %>% filter(plotnaam %in% intersect$plotnaam), 
-        col.regions = "red") + 
-  mapview(nieuwe_cirkels %>% filter(pointid %in% intersect$pointid))
+        col.regions = "red", layer = "bestaande punten") + 
+  mapview(cirkels_zandleemstreek %>% filter(pointid %in% intersect$pointid),
+          layer = "nieuwe punten")
 ```
 
-Er zijn twee cirkels die minstens 50% overlappen.
+
 
 
 ## Output als KML
