exclude footway to lay out points

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -215,8 +215,8 @@ list(
       gebied = selectie_openheid_klasses,
       exclusie = exclusie_osm_landgebruiken,
       osmdata = osm_belgium,
-      paths_include = c('track', 'footway', 'path', 'cycleway', 
-      'bridleway', 'tertiary', 'tertiary_link', 'unclassified'),
+      paths_include = c("track", "path", "cycleway", "bridleway", "tertiary", 
+                        "tertiary_link", "unclassified"),
       cutting_exclude = NULL,
       historic_exclude = NULL,
       waterway = NULL,
