--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -409,7 +409,7 @@ list(
   tar_target(
     steekproef_final,
     replace_by_existing(
-      sample = steekproef,
+      sample = steekproef_thinned,
       existing_points = existing_file,
       overlap_prop = 0.5
       ),
