create tar mapping over values of function

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -402,13 +402,15 @@ list(
 
 ```{targets nabehandeling}
 list(
-  tar_target(
-    steekproef_thinned,
-    thin_sample(
-      sample = steekproef,
-      thin_dist = 300
-      ),
-    pattern = map(steekproef)
+  tarchetypes::tar_map(
+    list(thin_dists = c(300, 600)),
+    tar_target(
+      steekproef_thinned,
+      thin_sample(
+        sample = steekproef,
+        thin_dist = thin_dists
+        ),
+      pattern = map(steekproef, thin_dists)
   ),
   tar_target(
     steekproef_final,
