--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -624,7 +624,7 @@ openheid_raster <- raster::ratify(openheid_raster)
 levels(openheid_raster)[[1]]$LO <- c("GL", "HGL", "HOL", "OL")
 
 openheid_raster %>%
-  mapview(alpha = 0.3)
+  mapview(alpha = 0.3, layer = "openheid_klasse")
 ```
 
 ```{r openheid-points}
@@ -1124,8 +1124,8 @@ Bijvoorbeeld: Als een nieuw punt voor meer dan 50 % overlapt met een bestaand pu
 
 > Opvragen bij SOVON?
 
+We bekijken overlap met de pilootstudie.
 Er is niet veel overlap.
-In dit geval zal er overlap zijn met de punten uit de pilootstudie in De Moeren. 
 We vervangen alle telpunten uit de steekproef van de zandleemstreek door reeds bestaande punten indien ze voor minstens 50 % overlappen en ze tot hetzelfde stratum behoren.
 Omdat we nu een nieuwe laag van sbp gebruiken, moeten we dit stratum opnieuw berekenen voor de bestaande punten.
 
@@ -1195,24 +1195,14 @@ mapview(oude_cirkels_sbp %>% filter(plotnaam %in% intersect$plotnaam),
           layer = "nieuwe punten")
 ```
 
-We vervangen de nieuwe punten in de steekproef door de bestaande.
+In dit geval zal er wat overlap zijn met de punten uit De Moeren. 
 
 ```{r}
-# Vervang id en geometry
-bestaand_overlap <- oude_punten_sbp %>%
-  inner_join(intersect, by = "plotnaam") %>%
-  select(plotnaam, pointid, regio) %>%
-  inner_join(steekproef %>% st_drop_geometry(), by = "pointid") %>%
-  select(pointid = plotnaam, key, value, Naam, tar_group, cvvi, area_prop_sb, 
-         openheid_klasse, openheid_waarde, is_sbp, in_sample, sample_order, 
-         batch, geometry, openheid_sbp)
-class(bestaand_overlap) <- class(steekproef)
-
-# voeg toe aan steekproef
-steekproef_overlap <- steekproef %>%
-  filter(!pointid %in% intersect$pointid) %>%
-  bind_rows(bestaand_overlap) %>%
-  arrange(openheid_sbp, sample_order)
+oude_punten_sbp %>%
+  st_drop_geometry() %>%
+  mutate(overlap = ifelse(plotnaam %in% intersect$plotnaam, "yes", "no")) %>%
+  count(regio, overlap) %>%
+  kable()
 ```
 
 
