--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -1224,6 +1224,12 @@ mapview(steekproef %>% st_buffer(300), alpha.regions = 0,
 ```
 
 ```{r}
+steekproef_out %>%
+  st_drop_geometry() %>%
+  count(openheid_sbp, batch)
+```
+
+```{r}
 # telpunten
 steekproef_out %>%
   st_write(dsn = file.path(
